--- a/app/src/main/res/layout/activity_add_new_work_experience.xml
+++ b/app/src/main/res/layout/activity_add_new_work_experience.xml
@@ -21,8 +21,8 @@
         android:id="@+id/textView30"
         android:layout_width="300dp"
         android:layout_height="61dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="124dp"
         android:text="Select Expertise Field:"
         android:textSize="28sp"
         android:textStyle="italic"
@@ -33,43 +33,52 @@
         android:id="@+id/textView29"
         android:layout_width="335dp"
         android:layout_height="93dp"
+        android:layout_marginTop="16dp"
         android:text="Add a new work experience to your CV"
         android:textSize="34sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="38dp"
-        tools:layout_editor_absoluteY="16dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.421"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Spinner
         android:id="@+id/spinnerAddNewWorkExperienceSelectExpField"
         android:layout_width="294dp"
         android:layout_height="59dp"
-        tools:layout_editor_absoluteX="36dp"
-        tools:layout_editor_absoluteY="205dp" />
+        android:layout_marginTop="28dp"
+        app:layout_constraintStart_toStartOf="@+id/textView30"
+        app:layout_constraintTop_toBottomOf="@+id/textView30" />
 
     <Spinner
         android:id="@+id/spinnerAddNewWorkExperienceYearsofwork"
         android:layout_width="301dp"
         android:layout_height="55dp"
-        tools:layout_editor_absoluteX="27dp"
-        tools:layout_editor_absoluteY="404dp" />
+        android:layout_marginTop="28dp"
+        app:layout_constraintStart_toStartOf="@+id/textView32"
+        app:layout_constraintTop_toBottomOf="@+id/textView32" />
 
     <EditText
         android:id="@+id/editTextAddNewWorkExperienceDescription"
         android:layout_width="358dp"
         android:layout_height="108dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="28dp"
         android:ems="10"
         android:inputType="text"
         android:text="Enter a descreption"
-        tools:layout_editor_absoluteX="26dp"
-        tools:layout_editor_absoluteY="487dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinnerAddNewWorkExperienceYearsofwork" />
 
     <Button
         android:id="@+id/btnAddNewWorkExperience"
         android:layout_width="295dp"
         android:layout_height="76dp"
+        android:layout_marginTop="24dp"
         android:text="Add Work Experience"
         android:textSize="24sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="58dp"
-        tools:layout_editor_absoluteY="618dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextAddNewWorkExperienceDescription" />
 </androidx.constraintlayout.widget.ConstraintLayout>
