Creation and edit of the following: LanguageDAO, LanguageDAOMemory,LanguageKnowledgeRecyclerViewAdapter, Select:anguageKnowledgeRecyclerViewAdapter, AddNewLanguageKnowledge file(Activity, Presenter, View), ChangeLanguageKnowledgeDetails file(Activity, Presenter, View), ModifyCVEditLanguageKnowledgeActivity, ModifyCVEditLanguageKnowledgePresenter,ModifyCVEditLanguageKnowledgeView, Basic Test creation for the aformetioned files (Note: Test need to be revised)

--- a/app/src/main/res/layout/activity_add_new_language_knowledge.xml
+++ b/app/src/main/res/layout/activity_add_new_language_knowledge.xml
@@ -1,6 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <Button
+        android:id="@+id/btnAddNewLanguageknowledge"
+        android:layout_width="299dp"
+        android:layout_height="120dp"
+        android:text="Add Language Knowledge"
+        android:textSize="34sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/editTextAddNewLanguageKnowledgeDescription"
+        app:layout_constraintStart_toStartOf="@+id/editTextAddNewLanguageKnowledgeDescription"
+        app:layout_constraintTop_toBottomOf="@+id/editTextAddNewLanguageKnowledgeDescription"
+        app:layout_constraintVertical_bias="0.739" />
+
+    <EditText
+        android:id="@+id/editTextAddNewLanguageKnowledgeDescription"
+        android:layout_width="384dp"
+        android:layout_height="108dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginBottom="128dp"
+        android:ems="10"
+        android:hint="Enter a description"
+        android:inputType="text"
+        android:textStyle="italic"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinnerAddNewLanguageKnowledgeSelectLevelOfKnowledge"
+        app:layout_constraintVertical_bias="0.804" />
+
+    <Spinner
+        android:id="@+id/spinnerAddNewLanguageKnowledgeSelectLevelOfKnowledge"
+        android:layout_width="276dp"
+        android:layout_height="64dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintStart_toStartOf="@+id/textView40"
+        app:layout_constraintTop_toBottomOf="@+id/textView40" />
+
+    <TextView
+        android:id="@+id/textView40"
+        android:layout_width="335dp"
+        android:layout_height="51dp"
+        android:layout_marginTop="32dp"
+        android:text="Select Level of Knowledge:"
+        android:textSize="28sp"
+        android:textStyle="italic"
+        app:layout_constraintStart_toStartOf="@+id/spinnerAddNewLanguageKnowledgeSelectLang"
+        app:layout_constraintTop_toBottomOf="@+id/spinnerAddNewLanguageKnowledgeSelectLang" />
+
+    <Spinner
+        android:id="@+id/spinnerAddNewLanguageKnowledgeSelectLang"
+        android:layout_width="305dp"
+        android:layout_height="58dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="@+id/textView39"
+        app:layout_constraintTop_toBottomOf="@+id/textView39" />
+
+    <TextView
+        android:id="@+id/textView39"
+        android:layout_width="268dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="56dp"
+        android:text="Select Language:"
+        android:textSize="28sp"
+        android:textStyle="italic"
+        app:layout_constraintStart_toStartOf="@+id/textView38"
+        app:layout_constraintTop_toBottomOf="@+id/textView38" />
+
+    <TextView
+        android:id="@+id/textView38"
+        android:layout_width="342dp"
+        android:layout_height="81dp"
+        android:layout_marginTop="32dp"
+        android:text="Add a new Language Knowledge to your CV"
+        android:textSize="34sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
