--- a/app/src/main/res/layout/activity_modify_cv_edit_language_knowledge.xml
+++ b/app/src/main/res/layout/activity_modify_cv_edit_language_knowledge.xml
@@ -6,4 +6,49 @@
     android:layout_height="match_parent"
     tools:context=".view.ModifyCV.ModifyCVEditLanguageKnowledge.ModifyCVEditLanguageKnowledgeActivity">
 
+    <Button
+        android:id="@+id/btnModifyCVEditLanguageKnowledgeAddNew"
+        android:layout_width="153dp"
+        android:layout_height="61dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="12dp"
+        android:text="ADD NEW"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@+id/textView56"
+        app:layout_constraintTop_toBottomOf="@+id/textView48" />
+
+    <TextView
+        android:id="@+id/textView56"
+        android:layout_width="202dp"
+        android:layout_height="29dp"
+        android:layout_marginTop="24dp"
+        android:text="Click on any item to change it"
+        app:layout_constraintStart_toStartOf="@+id/recyclerViewModifyCVEditLanguageKnowledge"
+        app:layout_constraintTop_toBottomOf="@+id/textView48" />
+
+    <TextView
+        android:id="@+id/textView48"
+        android:layout_width="362dp"
+        android:layout_height="79dp"
+        android:layout_marginTop="16dp"
+        android:text="Edit Your Language Knowledge"
+        android:textAlignment="center"
+        android:textSize="34sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.489"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewModifyCVEditLanguageKnowledge"
+        android:layout_width="372dp"
+        android:layout_height="531dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.48"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnModifyCVEditLanguageKnowledgeAddNew" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
