--- a/app/src/main/res/layout/recycler_view_language_knowledge_row.xml
+++ b/app/src/main/res/layout/recycler_view_language_knowledge_row.xml
@@ -30,7 +30,7 @@
             <TextView
                 android:id="@+id/textLanguageKnowledgeDescription"
                 android:layout_width="360dp"
-                android:layout_height="23dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="24dp"
