--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -56,9 +56,10 @@
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.067" />
+        app:layout_constraintVertical_bias="0.161" />
 
     <TextView
         android:id="@+id/textSignupRegisterAs"
@@ -73,4 +74,19 @@
         app:layout_constraintStart_toStartOf="@+id/textSignupSelectAccountType"
         app:layout_constraintTop_toTopOf="@+id/textSignupSelectAccountType"
         app:layout_constraintVertical_bias="0.0" />
+
+    <Button
+        android:id="@+id/backbuttonSignUp"
+        android:layout_width="117dp"
+        android:layout_height="44dp"
+        android:layout_marginBottom="40dp"
+        android:text="BACK"
+        android:textSize="14sp"
+        app:icon="@android:drawable/ic_menu_revert"
+        app:layout_constraintBottom_toTopOf="@+id/textSignupSelectAccountType"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.051"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.941" />
 </androidx.constraintlayout.widget.ConstraintLayout>
