--- a/app/src/main/res/layout/activity_login_employee.xml
+++ b/app/src/main/res/layout/activity_login_employee.xml
@@ -47,7 +47,7 @@
         app:layout_constraintHorizontal_bias="0.428"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.09" />
+        app:layout_constraintVertical_bias="0.12" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/editTextLoginEmployeeEmail"
@@ -80,4 +80,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.41000003" />
+
+    <Button
+        android:id="@+id/backbuttonLoginEmployee"
+        android:layout_width="122dp"
+        android:layout_height="49dp"
+        android:text="BACK"
+        android:textSize="14sp"
+        app:icon="@android:drawable/ic_menu_revert"
+        app:layout_constraintBottom_toTopOf="@+id/textLoginEmployeeHeader"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.055"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.695" />
 </androidx.constraintlayout.widget.ConstraintLayout>
