--- a/app/src/main/res/layout/activity_login_employer.xml
+++ b/app/src/main/res/layout/activity_login_employer.xml
@@ -50,7 +50,7 @@
         app:layout_constraintHorizontal_bias="0.428"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.09" />
+        app:layout_constraintVertical_bias="0.132" />
 
     <Button
         android:id="@+id/btnLoginEmployer"
@@ -79,5 +79,19 @@
         app:layout_constraintStart_toStartOf="@+id/textLoginEmployeeHeader2"
         app:layout_constraintTop_toBottomOf="@+id/textLoginEmployeeHeader2"
         app:layout_constraintVertical_bias="0.82" />
+
+    <Button
+        android:id="@+id/backbuttonLoginEmployer"
+        android:layout_width="124dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="4dp"
+        android:text="BACK"
+        app:icon="@android:drawable/ic_menu_revert"
+        app:layout_constraintBottom_toTopOf="@+id/textLoginEmployeeHeader2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.054"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.631" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
